--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /conference
+/fabbs
 
 # History files
 .Rhistory
@@ -39,3 +40,4 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+.DS_Store
